# matrix-multiplication

./: CMakeLists.txt  README.md
include/: cuda_common.cuh  dgemm.cuh  dgemm.hpp  dgemm_common.hpp  intmm.hpp  intmm_common.hpp  main.cuh  main.hpp
src/: cuda_common.cu  dgemm.cpp  dgemm.cu  dgemm_common.cpp  intmm.cpp  intmm_common.cpp  main.cpp  main.cu
